# consensus-hackathon-c2defi

./: .gitignore  Cargo.toml  README.md
.soroban/identity/: owner.toml
1-workshop/1-staking/: bun.lockb  index.ts  package.json
1-workshop/1-staking/.cargo/: config.toml
1-workshop/1-staking/scripts/: 0-setup.ts  1-initialize.ts  2-deposit.ts  3-withdraw.ts  4-set-admin.ts  e2e.ts
1-workshop/1-staking/staking-dapp/: bun.lockb  index.html  package.json
1-workshop/data-types/: Cargo.toml
1-workshop/data-types/src/: address.rs  array_and_bytes.rs  enum_example.rs  structs.rs  test.rs
2-examples/: Cargo.toml  README.md
2-examples/beans-merchant-app/src/: sdk.ts
2-examples/crowdfund/: Cargo.toml  index.ts
2-examples/crowdfund/public-goods-dapp/: package.json
2-examples/liquidity-pool/: Cargo.toml  README.md  bun.lockb  index.ts
2-examples/liquidity-pool/contracts/abundance/test_snapshots/test/: transfer_insufficient_balance.1.json
2-examples/liquidity-pool/contracts/soroban-liquidity-pool-contract/src/: test.rs
2-examples/liquidity-pool/contracts/soroban-liquidity-pool-contract/test_snapshots/test/: deposit_amount_zero_should_panic.1.json
examples/: Cargo.toml  README.md
examples/0-getting-started/: README.md
examples/1-hello-world/: README.md  bun.lockb  index.ts  package.json
examples/1-hello-world/contracts/soroban-hello-world-contract/: Cargo.toml
examples/1-hello-world/contracts/soroban-hello-world-contract/src/: lib.rs  test.rs
examples/1-hello-world/contracts/soroban-hello-world-contract/test_snapshots/test/: test.1.json
examples/1-hello-world/hw-dapp/: bun.lockb  package.json
examples/2-deposits-and-balances/: index.ts  package.json  test1.tape
examples/2-deposits-and-balances/dnb-dapp/: README.md  bun.lockb  index.html  package.json
examples/2-deposits-and-balances/incrementor-dapp/: package.json
examples/2.deposits-and-balances/: bun.lockb
examples/2.deposits-and-balances/shared/: contracts.ts
examples/3-public-goods/: Cargo.toml  README.md  package.json
examples/3.public-goods/: package.json
examples/4-liquidity-pool/lp-dapp/: package.json
examples/4-liquidity-pool/shared/: contracts.ts
examples/4.liquidity-pool/: index.ts
examples/4.liquidity-pool/lp-dapp/: bun.lockb
examples/beans-merchant-app/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
examples/beans-merchant-app/public/: index.html
examples/beans-merchant-app/src/: App.tsx
examples/data-types/src/: lib.rs  mapping.rs  (+2 more)
examples/deposits-and-balances/: Cargo.toml
examples/getting-started/: README.md
examples/hello-world/: bun.lockb  index.ts  package-lock.json  package.json
examples/liquidity-pool/: package.json
examples/public-goods/: bun.lockb  index.ts
examples/staking/: README.md  index.ts  package.json
examples/staking/contracts/soroban-increment-contract/: Cargo.toml
examples/staking/contracts/soroban-increment-contract/src/: lib.rs
examples/staking/contracts/soroban-increment-contract/test_snapshots/test/: contribute.1.json
(+64 files in other folders)
