[workspace]
resolver = "2"

members = ["1-workshop/*/contracts/*", "2-examples/*/contracts/*"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
soroban-sdk = "21.0.1-preview.3"
soroban-token-sdk = "21.0.1-preview.3"
