[workspace]
resolver = "2"

members = ["crowdfund/contracts/*"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
soroban-sdk = "20.5.0"
soroban-token-sdk = "20.5.0"

[workspace.dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }


[profile.release-with-logs]
inherits = "release"
debug-assertions = true
